<resources>
    <string name="app_name">MsgShareApp</string>
    <string name="dummy">dummy</string>
    <string name="btn_show_toast">Show Toast</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_data_to_next_activity">SEND DATA TO NEXT ACTIVITY</string>
    <string name="share_to_other_apps">Share to other Apps</string>
    <string name="recycler_view_demo">Recycler View Demo</string>
    <string name="btn_was_clicked">Button was clicked</string>
</resources>