<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_show_toast"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/user_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_your_message"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/send_data_to_next_activity" />

    <Button
        android:id="@+id/implicit_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F0F0"
        android:text="@string/share_to_other_apps"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/recview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F0F"
        android:text="@string/recycler_view_demo"
        tools:ignore="TextContrastCheck" />

</LinearLayout>